argo-workflow/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argowfr
  namespace: default
spec:
  parentRefs:
    - name: eg
  hostnames:
    - "argo-workflows.hq.lightup.tw"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          namespace: argo
          name: argo-workflows-server
          port: 2746
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
